# pdf-rag

./: .env.example  README.md  main.py  pyproject.toml
db/: database.py  models.py
prompts/: prompt.py
services/: embedding.py  ingestion.py  llm.py  loader.py  rag.py  vector_store.py
updated-langchain/: 01-langchain-intro.ipynb  02-langchain-models.ipynb  03-langchain-tools.ipynb
