[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "This project is a tutorial for LangChain & LangGraph, a framework for building applications with LLMs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.12",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.5",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    "psycopg>=3.3.4",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
]
